@@ -26,7 +26,7 @@
 ***************************************************************/
 /**
  *
- * Front End creating/editing/deleting records authenticated by fe_user login.
+ * Part of the sr_feuser_register (Front End User Registration) extension.
  * A variant restricted to front end user self-registration and profile maintenance, with a number of enhancements (see the manual).
  *
  * $Id$
